--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,12 @@
+name = "GradValley"
+uuid = "09181f56-3701-4cc7-90cd-48d6c64fd517"
+authors = ["Jonas S."]
+version = "0.1.0"
+
 [deps]
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[compat]
+LoopVectorization = "0.12.146"
