--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,4 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-LoopVectorization = "0.12.146"
+LoopVectorization = "=0.12.146"
