--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,13 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+julia = "1.7"
+ChainRules = "1.49.0"
+ChainRulesOverloadGeneration = "0.1.4"
+ExprTools = "0.1.9"
+LinearAlgebra = "1.7"
 LoopVectorization = "=0.12.146"
+Random = "1.7"
+SparseArrays = "1.7"
+SpecialFunctions = "2.2.0"
+Statistics = "1.7"
