--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "GradValley"
 uuid = "09181f56-3701-4cc7-90cd-48d6c64fd517"
+authors = ["Jonas Steinebach <joni@unitybox.de>"]
 version = "0.1.0"
 
 [deps]
