--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,5 +2,5 @@
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
-CpuId = "adafc99b-e345-5852-983c-f28acb93d879"^
+CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
