--- a/test/Project.toml
+++ b/test/Project.toml
@@ -4,3 +4,5 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
